[tool.poetry]
name = "tiktoken-saori"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tiktoken_saori"}]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
flask = "^2.2.3"
tiktoken = "^0.3.3"
requests = "^2.28.2"
pyinstaller = "^5.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
